cluster/istio/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: istio-system
  labels:
    istio-injection: enabled
