cluster/istio/base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: argocd/argocd-ingress-cert # This should match the Certificate secretName
    hosts:
    - argo.aksnp.diehlabs.com # This should match a DNS name in the Certificate
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kiali-ingress-cert # This should match the Certificate secretName
    hosts:
    - kiali.aksnp.diehlabs.com # This should match a DNS name in the Certificate
